recursion.lessons.recursion.tree.Tree.scala.error
Tree:11: error: not found: value steps0
		tree(steps0, length * shrink, angle, shrink);
                     ^